--- a/css/menu.css
+++ b/css/menu.css
@@ -10,6 +10,8 @@ img {
   max-width: 100%;
   vertical-align: middle;
   padding: 10px 0 0 10px;
+  object-fit: scale-down;
+  height: auto;
 }
 .page-header img {
   height: auto;
@@ -408,8 +410,10 @@ footer {
   margin-bottom: 80px;
 }
 .room-card > img {
-  width: 335px;
+  width: 275px;
   height: 100%;
+  float: left;
+  margin-right: 10px;
 }
 @media (max-width: 860px) {
   .room-card > img {
