--- a/css/voice.css
+++ b/css/voice.css
@@ -10,6 +10,8 @@ img {
   max-width: 100%;
   vertical-align: middle;
   padding: 10px 0 0 10px;
+  object-fit: scale-down;
+  height: auto;
 }
 .page-header img {
   height: auto;
