--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 img {
   max-width: 100%;
   vertical-align: middle;
-	padding: 10px 0 0 10px;
+	/* padding: 10px 10px; */
 }
 .page-header img {
   height: auto;
@@ -119,12 +119,16 @@ button:not(.page-top):hover {
   }
 	  .page-header img{
     width: 120px;
+    margin: 10%;
+  }
+  #itemA {
+    padding: 0%;
   }
 }
 .header-tel {
     margin-right: 15px;
-    text-align: right;
-		padding-right: 2rem;
+    /* text-align: right; */
+		/* padding-right: 2rem; */
 		display: flex;
 	 justify-content: flex-end;
 }
@@ -148,7 +152,7 @@ a {
 }
 @media (max-width: 860px) {
 	.header-tel a{
-		font-size: 1.5rem;
+		font-size: 1.3rem;
 	}
 	.header-open{
 		display: none;
@@ -221,7 +225,7 @@ a {
 }
 
 /*! -----hamburger----- */
-.hamburger {
+/* .hamburger {
   position: fixed;
   top: 0;
   right: 0;
@@ -233,12 +237,12 @@ a {
   color: #653d3d;
   display: none;
   background: rgba(255, 255, 255, 0.5);
-  border-radius: 15%;
-}
+  border-radius: 15%; 
+}*/
 @media (max-width: 860px) {
-	.hamburger {
+	/* .hamburger {
 		display: block;
-	}
+	} */
   .g-nav {
     z-index: 2;
     position: fixed;
@@ -389,6 +393,14 @@ display: flex;
   justify-content: center;
   align-items: center;
 }
+.key-visual-p{
+  padding: 10px;
+}
+@media (min-width: 860px) {
+  .key-visual-s{
+    display: none;
+}
+}
   .img-box h2{
   background-color: rgba(255, 255, 255, 62%);
   }
@@ -399,11 +411,29 @@ display: flex;
 @media (max-width: 860px) {
   .m-visual {
     margin-top: 0;
+    padding: 4px 16px;
   }
   .img-box {
     flex-direction: column;
   }
-
+  .key-visual-p{
+  display: none;
+}
+.top-hero-text{
+  display: none;
+}
+  .top-hero-title{
+    font-size: 1.3rem;
+  }
+  .top-hero-comment-1{
+    font-size: 0.7rem;
+  }
+  .top-hero-comment-2{
+    display: none;
+  }
+  .s-none{
+    display: none;
+  }
  }
 
 .m-visual .img-box {
@@ -429,7 +459,9 @@ display: flex;
 	width: 470px;
 	margin-right: 1px;
 }
-
+.underline{
+  text-decoration:underline;
+}
 .pink {
   padding: 2px 24px;
   margin-top: 20px;
@@ -444,4 +476,5 @@ display: flex;
 
 .syokai{
   background-color: #ffecec;
+  padding: 8px 4px;
 }
